<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listhomeaddressRowModel" type="com.nemanjasapplication.app.modules.profileaddressdetails.data.model.ListhomeaddressRowModel"/>
    </data>
    <FrameLayout android:id="@+id/frameCurrentaddress"
        android:layout_height="wrap_content" android:layout_width="match_parent">
        <LinearLayout android:id="@+id/linearRowhomeaddress"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_52cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtHomeaddress"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_111pxv"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_weight="0.62" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{listhomeaddressRowModel.txtHomeaddress}"
                style="@style/txtLatoregular13" tools:text="@string/lbl_home_address"/>
            <LinearLayout android:id="@+id/linearRowedit"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_111pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_194pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_weight="0.38" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imageEdit"
                    android:layout_height="@dimen/_8pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_edit"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_edit"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEditOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_weight="0.62"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listhomeaddressRowModel.txtEditOne}"
                    style="@style/txtLatoregular13_1" tools:text="@string/lbl_edit"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearColumnaddresscounterTwo"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRowaddresscounterTwo"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAddressCounterTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.43"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listhomeaddressRowModel.txtAddressCounterTwo}"
                    style="@style/txtLatoregular13_4" tools:text="@string/lbl_address_1"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_185pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.57"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listhomeaddressRowModel.txtLanguage}"
                    style="@style/txtLatoregular13" tools:text="@string/lbl_amoy_st_592"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowaddresscounterOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAddressCounterOne"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_weight="0.43"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listhomeaddressRowModel.txtAddressCounterOne}"
                    style="@style/txtLatoregular13_4" tools:text="@string/lbl_address_2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginStart="@dimen/_185pxh"
                    android:layout_weight="0.57"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listhomeaddressRowModel.txtLanguageOne}"
                    style="@style/txtLatoregular13" tools:text="@string/lbl_amoy_st_592"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLosAngeles"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_255pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listhomeaddressRowModel.txtLosAngeles}"
                style="@style/txtLatoregular13" tools:text="@string/lbl_los_angeles"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCityOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listhomeaddressRowModel.txtCityOne}"
                style="@style/txtLatoregular13_4" tools:text="@string/lbl_city"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txt0000000"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listhomeaddressRowModel.txt0000000}"
                style="@style/txtLatoregular13" tools:text="@string/lbl_0000000"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPostalcodeOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listhomeaddressRowModel.txtPostalcodeOne}"
                style="@style/txtLatoregular13_4" tools:text="@string/lbl_postal_code2"/>
        </LinearLayout>
    </FrameLayout>
</layout>
