<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listpriceRowModel" type="com.nemanjasapplication.app.modules.profilemyorders.data.model.ListpriceRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowprice"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageImage"
            android:layout_height="@dimen/_110pxh"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_width="@dimen/_109pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_image_110x109}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image_110x109"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnprice"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.47" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{listpriceRowModel.txtPrice}"
                style="@style/txtLatoregular18" tools:text="@string/lbl_12_50"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtShortsinYello"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listpriceRowModel.txtShortsinYello}"
                style="@style/txtLatoregular14" tools:text="@string/msg_shorts_in_yello"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listpriceRowModel.txtLanguage}"
                    style="@style/txtLatoregular14_5" tools:text="@string/lbl_qty"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listpriceRowModel.txtOne}"
                    style="@style/txtLatoregular14" tools:text="@string/lbl_1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
