<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileAddressDetailsVM" type="com.nemanjasapplication.app.modules.profileaddressdetails.data.viewmodel.ProfileAddressDetailsVM"/>
    </data>
    <androidx.core.widget.NestedScrollView android:clipToPadding="false"
        android:fillViewport="true"
        android:id="@+id/scrollViewScrollview"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnaddAnotherAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnaddresscounter"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAddressCounter"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{profileAddressDetailsVM.profileAddressDetailsModel.txtAddressCounter}"
                    style="@style/txtLatoregular13_3" tools:text="@string/lbl_address_1"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_50_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/lbl_enter_address"
                    android:id="@+id/etGroup5627"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={profileAddressDetailsVM.profileAddressDetailsModel.etGroup5627Value}"
                    android:textColorHint="@color/bluegray_400"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnaddresscounterOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAddressCounterOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{profileAddressDetailsVM.profileAddressDetailsModel.txtAddressCounterOne}"
                    style="@style/txtLatoregular13_3" tools:text="@string/lbl_address_2"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_50_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/lbl_enter_address"
                    android:id="@+id/etGroup5627One"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={profileAddressDetailsVM.profileAddressDetailsModel.etGroup5627OneValue}"
                    android:textColorHint="@color/bluegray_400"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumncity"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCity"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{profileAddressDetailsVM.profileAddressDetailsModel.txtCity}"
                    style="@style/txtLatoregular13_3" tools:text="@string/lbl_city"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_50_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/lbl_enter_your_city"
                    android:id="@+id/etGroup5627Two"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@={profileAddressDetailsVM.profileAddressDetailsModel.etGroup5627TwoValue}"
                    android:textColorHint="@color/bluegray_400"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnpostalcode"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPostalCode"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{profileAddressDetailsVM.profileAddressDetailsModel.txtPostalCode}"
                    style="@style/txtLatoregular13_3" tools:text="@string/lbl_postal_code"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_50_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/msg_enter_postal_co"
                    android:id="@+id/etGroup5627Three"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@={profileAddressDetailsVM.profileAddressDetailsModel.etGroup5627ThreeValue}"
                    android:textColorHint="@color/bluegray_400"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnphonenumber"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPhonenumber"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{profileAddressDetailsVM.profileAddressDetailsModel.txtPhonenumber}"
                    style="@style/txtLatoregular13_3" tools:text="@string/lbl_phone_number"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_50_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/msg_enter_phone_num"
                    android:id="@+id/etGroup5627Four"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@={profileAddressDetailsVM.profileAddressDetailsModel.etGroup5627FourValue}"
                    android:textColorHint="@color/bluegray_400"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnAddAnotherAddress"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/msg_add_another_add"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline" tools:text="@string/msg_add_another_add"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCurrentaddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{profileAddressDetailsVM.profileAddressDetailsModel.txtCurrentaddress}"
                style="@style/txtLatoregular13" tools:text="@string/msg_current_address"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerListhomeaddress"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                itemSpace="@{@dimen/_21pxh}" tools:itemCount="2" tools:listitem="@layout/row_listhomeaddress"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
